# PDC-Sp24-BSCS23001-Nasir

./: README.md  package-lock.json
backend/: database.db  pyproject.toml  server.py
backend/src/: ai_generator.py  app.py
frontend/: package-lock.json  package.json
frontend/src/challenge/: ChallengeGenerator.jsx
