[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circuitbreaker>=2.1.3",
    "clerk-backend-api>=5.0.6",
    "fastapi>=0.125.0",
    "groq>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "starlette>=0.50.0",
    "svix>=1.92.2",
    "uvicorn>=0.46.0",
]
